# fusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt  fusion.h
engine/audio/: miniaudio.vorbis.h
engine/core/: _base.h  array.c  array.h  file.c  file.h  hash2.c  hash2.h  logger.c  logger.h  main.c  main.h  main.inner.h  memory.cc  memory.h  misc.c  misc.h  object.c  object.h
engine/libs/: libs_imp_1.c  nuklear.h  portablegl.h  stb_truetype.h  vk_mem_alloc.cc
engine/platform/: glfw.c  glfw.h  glfw.inner.h  misc.linux.c  misc.linux.h  misc.linux.inner.h  misc.window.c  misc.window.h  misc.window.inner.h  sdl.c  sdl.h  sdl.inner.h  vfs.linux.h  vfs.window.h
engine/renderer/: backend.h  context.h  misc.h  shader.h
engine/renderer/OpenGL/: misc.inner.h  srcs.7z  surface.c
engine/renderer/Vulkan/: context.c  misc.c  misc.inner.h  shader.c  surface.c
engine/renderer/Vulkan/inner/: device.c  misc.cc  pipeline.c  swapchain.c  wrapper.h
libs/glad/include/glad/: egl.h  gl.h  gles2.h  vulkan.h  wgl.h
libs/glad/src/: gl.c  vulkan.c
modules/: FindFAAD2.cmake  FindGLFW.cmake  FindGlslang.cmake  FindLiburing.cmake  FindOpenAL.cmake  FindSDL2.cmake  FindWayland.cmake  FindXCB.cmake
src/: CMakeLists.txt  _inner.h  fusion.h
src/asset/: defShader.glsl  res.h
src/audio/: miniaudio.aac.h  miniaudio.opus.h
src/core/: array.c  array.h  atomic.c  atomic.h  buddy.c  buddy.h  file.c  file.h  hash2.c  hash2.h  logger.c  logger.h  main.c  main.h  main_inner.h  memory.c  memory.h  misc.c  misc.h  object.c  object.h  rand.c  rand.h  sc_map.c  sc_map.h  thread.c  thread.h  timer.c  timer.h  types.h  utils.c  utils.h
src/platform/: glfw.c  glfw.h  glfw.inner.h  glfw_inner.h  misc.c  misc.h  misc.linux.c  misc.linux.h  misc.linux.inner.h  misc.window.c  misc.window.h  misc.window.inner.h  sdl.c  sdl.h  sdl.inner.h  sdl_inner.h  vfs.linux.h  vfs.window.h
src/renderer/: _gl.h  backend2.h  backend3.h  context2.c  context2.h  gl2.c  gl2.h  misc.c  misc.h  misc.inner.h  shader.h  shader.inner.h  types.c  types.h
src/renderer/OpenGL/: cmds.c  misc.inner.h  shader.c  surface.c
test/: CMakeLists.txt
test/app/: CMakeLists.txt  main copy 2.c  main copy.c  main.c
test/basic/: CMakeLists.txt  main.c
test/customApp/: main.c
test/customSource/: CMakeLists.txt  main.c  naett.c  naett.h
test/gl1/: CMakeLists.txt  main.c  main_0.c  rect.c  res.h  test.cc  tri.vert  triangle.c  vert.spv
test/resource_impoter/: main.c
test/signal/: main.c
test/simple_draw/: CMakeLists.txt  main.c
test/window/: main.c
tests/: CMakeLists.txt
tests/01_basic/: main.c
tests/02_window/: CMakeLists.txt  main.c
tests/03_custom_draw/: CMakeLists.txt  main.c  misc.h
tests/10_warpper/: CMakeLists.txt  description.c  main.c  main2.c
tests/10_warpper/warpper/: device.c  instance.c  misc.cc  misc.inner.h  pipeline.c  surface.c  warpper.h
